--- a/.github/workflows/new-release-tag-ci.yml
+++ b/.github/workflows/new-release-tag-ci.yml
@@ -37,6 +37,6 @@ jobs:
     needs: [set_vars]
     uses: ./.github/workflows/create-release-notes.yml
     with:
-      tag: {{ needs.set_vars.outputs.git_tag }}
+      tag: ${{ needs.set_vars.outputs.git_tag }}
     secrets:
       GHE_ACCESS_TOKEN: ${secrets.GHE_ACCESS_TOKEN}
