--- a/.github/workflows/create-release-notes.yml
+++ b/.github/workflows/create-release-notes.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: "Create notes"
         uses: "actions/github-script@v6"
+        env:
+          TAG: ${{ inputs.tag }}
         with:
           github-token: "${{ secrets.GHE_ACCESS_TOKEN }}"
           script: |
@@ -28,11 +30,11 @@ jobs:
               const response = await github.rest.repos.createRelease({
                 draft: false,
                 generate_release_notes: true,
-                name: inputs.tag,
+                name: process.env.TAG,
                 owner: context.repo.owner,
                 prerelease: false,
                 repo: context.repo.repo,
-                tag_name: inputs.tag,
+                tag_name: process.env.TAG,
               });
 
               core.exportVariable('RELEASE_ID', response.data.id);
@@ -60,9 +62,11 @@ jobs:
 
       - name: COPY/PASTE formatted notes with Jira links
         uses: "actions/github-script@v6"
+        env:
+          BODY: ${{ steps.release.outputs.body }}
         with:
           script: |
-            const body = steps.release.outputs.body
+            const body = process.env.BODY
             const arr = body.split('*').map((line) => {
               const regex = /\[THRIVE-\d+]/g
               const matches = line.match(regex)
