--- a/.github/workflows/format-release-notes.yml
+++ b/.github/workflows/format-release-notes.yml
@@ -4,7 +4,7 @@ on: workflow_dispatch
 
 jobs:
   format_release_notes:
-    runs-on: comcast-runner
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
